# basic_c

./: -g  .emacs.desktop  .gdb_history  .gitignore  .project.gf  1.bill.count.c  1.string_upper_lower.c  12.factorial.c  14.srable.word.c  15.srable.word1.c  18.factorial.number.c  2_celsius.c  2pointer.splitword.linkedlist.c  4.volspere.c  6.printf_scanf.c  7.isbn.c  8.2.digital_letter2.c  8.2.interest.c  8.biff.speak.c  8.upc.c  9.selecton_statment_clock.c  LINKEDLIST_STACK_QUE.c  MOCK_DATA.csv  README.MD  a.c  a.out  algo.2_pointer.splitword.linkedlist.c  algo.LINKEDLIST_STACK_QUE.c  algo.linkedList.doubly.c  algo.linkedList_reverse_recusive.c  algo.linked_list_que__simple.c  algo.linked_list_xor_linked_list.c  algo.linked_need-fix.c  algo.quickshort.lomuto.c  algo.selection.sort.c  algo.shadow_array_macro.c  alog.linklist.que.c  alogo.hasmap.main.c  anagram.word.c  array.que-adt_array.c  (+106 more)
IA32_asm_reverse_engi/: .gdb_history  prog  simple.c
c_app/: main.c  nzlib.h
c_app_test_lib/: CMakeLists.txt  nzutil.h  quicksort.c
computer_system/chapter_2_repersentation/: 2.38.c  main.c
lib/: util.c
module/: a.out  remainder.c
mylib/: nzio.h
remainder_app/: main.c  reminder.h
trick_c/: .clangd  main.c
